# homechan

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
chat/: consumers.py  routing.py  tests.py
chat/consumers/: chat.py  matrix.py  mqtt.py
chat/templates/chat/: index.html  room.html
homechan/: asgi.py  settings.py  urls.py  wsgi.py
tasmota/: apps.py  models.py
tasmota/migrations/: 0001_initial.py
