[tool.poetry]
name = "homechan"
version = "0.1.0"
description = "Django Channels for home automation"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
channels = "^3.0.5"
channels-redis = "^3.4.1"
selenium = "^4.3.0"
mqttasgi = {git = "https://git@github.com/nim65s/mqttasgi.git", rev = "master"}
matrix-asgi = {git = "https://git@github.com/nim65s/matrix-asgi.git", rev = "main"}

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
